<resources>
    <string name="app_name">SOP</string>

    <string name="nav_home_string">Головна</string>
    <string name="nav_profile_string">Мій профіль</string>
    <string name="nav_created_string">Створені СОП</string>
    <string name="nav_favorite_string">Збережені СОП</string>
    <string name="nav_schedule_string">СОПи на узгодженні</string>
    <string name="nav_catalog_string">Каталог СОП</string>
    <string name="nav_account_string">Аккаунт</string>

    <string name="nav_example_username">Іванов Іван</string>
    <string name="nav_example_email">ivanovivan1923@gmail.com</string>
    <string name="nav_notification_string">Повідомлення</string>
    <string name="nav_search_string">Пошук</string>
    <string name="nav_open_status_string">Навігацію відкрито</string>
    <string name="nav_close_status_string">Навігація закрита</string>
    <string name="sop_name">Найменування СОП</string>
    <string name="sop_about">Опис СОП</string>
    <string name="todo">TODO</string>
    <string name="last_sop">Останні СОПи</string>
    <string name="fio_tv">ФIО:</string>
    <string name="position_tv">Посада:</string>
    <string name="department_tv">Цех:</string>
    <string name="email_tv">Ел.пошта:</string>
    <string name="phone_tv">Телефон:</string>
    <string name="average_assessment_SOP">Середня оцiнка СОП:</string>
    <string name="commentToMySOP">Коментарi до моїх СОП:</string>
    <string name="commentToOtherSOP">Коментарi до iнших СОП:</string>
    <string name="step_action">Дiя:</string>
    <string name="step_time">Тривалiсть:</string>
    <string name="step_expectedResult">Очікуваний\nрезультат:</string>
    <string name="step_keyPoints">Ключовi моменти:</string>
    <string name="sop_step_image_string">Зображення кроку СОП</string>
    <string name="sop_step_image_description">Зображення кроку СОП</string>
    <string name="safety_string">Безпека</string>
    <string name="important_string">Важливість</string>
    <string name="quality_string">Якість</string>
    <string name="reaction_string">Реагування</string>
    <string name="checklist_string">Відмітка у чек-листі</string>
    <string name="action_string">Дія: </string>
    <string name="duration_string">"Тривалість: "</string>
    <string name="expected_result_string">Очікуваний результат:</string>
    <string name="keypoints_string">Ключові моменти:</string>
    <string name="category_string">Категорія:</string>
    <string name="status_string">Статус:</string>
    <string name="description_string">Опис:</string>
    <string name="created_at_string">Створено:</string>
    <string name="approved_at_string">Затверджено:</string>
    <string name="nd_string">Посилання на НД:</string>
    <string name="owner_string">Створив:</string>
    <string name="approved_by_string">Затвердив:</string>
    <string name="coordinated_by_string">Узгодив:</string>
    <string name="select_photo_string">ОБРАТИ ЗОБРАЖЕННЯ</string>
    <string name="create_sop">Створити СОП</string>

</resources>