<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGrey"
                android:text="Ремонт вальцетокарного станка 1254231-3211.23"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/titleColor"
                android:gravity="center"
                android:padding="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/sop_step_safety_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_safety"
                        app:tint="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/sop_step_safety_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/safety_string"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/sop_step_priority_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_high_priority"
                        app:tint="@color/colorMiddleGrey"/>

                    <TextView
                        android:id="@+id/sop_step_priority_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorMiddleGrey"
                        android:text="@string/important_string"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/sop_step_quality_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_quality"
                        app:tint="@color/colorMiddleGrey"/>

                    <TextView
                        android:id="@+id/sop_step_quality_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorMiddleGrey"
                        android:text="@string/quality_string"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/sop_step_reaction_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_reaction"
                        app:tint="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/sop_step_reaction_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/reaction_string"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.2">

                    <ImageView
                        android:id="@+id/sop_step_checklist_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_checklist"
                        app:tint="@color/colorMiddleGrey"/>

                    <TextView
                        android:id="@+id/sop_step_checklist_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textColor="@color/colorMiddleGrey"
                        android:text="@string/checklist_string"/>

                </LinearLayout>

            </LinearLayout>
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/zavod_preview"
                android:contentDescription="@string/sop_step_image_description"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/sop_step_back"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_back"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="Крок 1 з 15"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/sop_step_next"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:tint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_forward"/>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TableRow android:paddingVertical="10dp" android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColor="@color/textTitleColor"
                        android:text="@string/action_string"/>

                    <TextView
                        android:id="@+id/sop_step_action_tv"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textPrimaryColor"
                        android:paddingHorizontal="5dp"
                        android:text="Провести візуальний огляд механічної частини станка"/>
                </TableRow>

                <TableRow android:paddingVertical="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColor="@color/textTitleColor"
                        android:text="@string/duration_string"/>

                    <TextView
                        android:id="@+id/sop_step_duration_tv"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textPrimaryColor"
                        android:paddingHorizontal="5dp"
                        android:text="30 хвилин"/>
                </TableRow>

                <TableRow android:paddingVertical="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColor="@color/textTitleColor"
                        android:text="@string/expected_result_string"/>

                    <TextView
                        android:id="@+id/sop_step_result_tv"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textPrimaryColor"
                        android:paddingHorizontal="5dp"
                        android:text="Якійсь результат"/>
                </TableRow>

                <TableRow android:paddingVertical="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textColor="@color/textTitleColor"
                        android:text="@string/keypoints_string"/>

                    <TextView
                        android:id="@+id/sop_step_keypoints_tv"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textPrimaryColor"
                        android:paddingHorizontal="5dp"
                        android:text="Механічу частину - ОТ МУСОРА ГЕТЬ! Порошенка ГЕТЬ! Усіх геть"/>
                </TableRow>

            </TableLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>