<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.createSop.fragment_create_sop_steps">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGrey"
                android:gravity="center"
                android:padding="15dp"
                android:text="Ремонт вальцетокарного станка 1254231-3211.23"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/titleColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sop_step_safety_icon"
                        app:tint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_safety" />

                    <TextView
                        android:id="@+id/sop_step_safety_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/safety_string"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sop_step_priority_icon"
                        app:tint="@color/colorMiddleGrey"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_high_priority" />

                    <TextView
                        android:id="@+id/sop_step_priority_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/important_string"
                        android:textColor="@color/colorMiddleGrey"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sop_step_quality_icon"
                        app:tint="@color/colorMiddleGrey"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_quality" />

                    <TextView
                        android:id="@+id/sop_step_quality_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/quality_string"
                        android:textColor="@color/colorMiddleGrey"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sop_step_reaction_icon"
                        app:tint="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_reaction" />

                    <TextView
                        android:id="@+id/sop_step_reaction_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reaction_string"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/sop_step_checklist_icon"
                        app:tint="@color/colorMiddleGrey"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_checklist" />

                    <TextView
                        android:id="@+id/sop_step_checklist_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/checklist_string"
                        android:textColor="@color/colorMiddleGrey"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/sopImageStep_imageView"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:contentDescription="@string/sop_step_image_description"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/select_photo_steps_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#EA5D5D"
                android:text="@string/changePhoto_createSop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/sop_step_back"
                    app:tint="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:text="Крок 1 з 1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/sop_step_next"
                    app:tint="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TableRow
                    android:paddingVertical="10dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:text="@string/action_string"
                        android:textColor="@color/textTitleColor" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:text="@string/duration_string"
                        android:textColor="@color/textTitleColor" />

                    <EditText
                        android:id="@+id/editTextTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="time" />

                </TableRow>

                <TableRow android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:text="@string/expected_result_string"
                        android:textColor="@color/textTitleColor" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        android:text="@string/keypoints_string"
                        android:textColor="@color/textTitleColor" />

                    <EditText
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="#EA5D5D"
                    android:text="+ Шаг" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="#8BC34A"
                    android:text="Зберегти" />
            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</FrameLayout>